--- a/src/pages/price-list/lg-dryer-repair-cost.astro
+++ b/src/pages/price-list/lg-dryer-repair-cost.astro
@@ -72,7 +72,7 @@ import Layout from "@layouts/Layout.astro";
 
 
    <tr>
-       <td class="tdservice">LG dryer motor replacement cost *</td>
+       <td class="tdservice"><a class="w" href="/price-list/dryer-motor-replacement-cost">LG dryer motor replacement cost *</a></td>
        <td class="price">$220</td>
    </tr>
    <tr>
