--- a/src/pages/price-list/dryer-motor-replacement-cost.astro
+++ b/src/pages/price-list/dryer-motor-replacement-cost.astro
@@ -30,9 +30,9 @@ import Layout from "@layouts/Layout.astro";
 &bull; Motor Specification: The power and brand of the motor can significantly affect the cost. OEM (Original Equipment Manufacturer) parts are generally more expensive than aftermarket alternatives.<br><br>
 &bull; Labor Costs: Depending on your location and the service provider, labor costs can vary. Technicians may charge a flat rate or an hourly fee.</p>
 <h2>Average Dryer Motor Costs</h2>
-<p>&bull; Part Costs: The price of a new dryer motor ranges from $50 to $250, depending on the brand and specifications.<br><br>
-&bull; Labor Costs: Professional installation can cost between $100 and $200, varying by region and the complexity of the job.<br><br>
-&bull; Total Cost: On average, expect to pay between $150 and $450 for the complete motor replacement service.</p>
+<p>&bull; Part Costs: The price of a new dryer motor ranges from $50 to $230, depending on the brand and specifications.<br><br>
+&bull; Labor Costs: Professional installation of a dryer motor will cost $220 at our company.<br><br>
+&bull; Total Cost: On average, expect to pay between $270 and $450 for the complete motor replacement service. </p>
 <h2>DIY vs. Professional Dryer Motor Replacement</h2>
 <p>&bull; DIY Replacement: If you have the necessary skills and tools, you can save on labor costs by replacing the dryer motor yourself. Ensure you understand the risks and steps involved.<br><br>
 &bull; Professional Replacement: Hiring a professional is recommended for safety and warranty considerations. Professionals can ensure the job is done correctly and efficiently.</p>
