--- a/src/pages/price-list/lg-dryer-repair-cost.astro
+++ b/src/pages/price-list/lg-dryer-repair-cost.astro
@@ -82,7 +82,7 @@ import Layout from "@layouts/Layout.astro";
 
 
    <tr>
-       <td class="tdservice">LG dryer igniter replacement cost *</td>
+       <td class="tdservice"><a class="w" href="/price-list/dryer-igniter-replacement-cost">LG dryer igniter replacement cost *</a></td>
        <td class="price">$220</td>
    </tr>
    <tr>
