--- a/src/pages/price-list/appliance-reapir-cost.astro
+++ b/src/pages/price-list/appliance-reapir-cost.astro
@@ -11,19 +11,19 @@ import Layout from "@layouts/Layout.astro";
 <Layout title="Appliance REpair Price List">
 <Container>
     <main>
-        <h1><span class="animate-charcter">LG Dryer Repair Cost:</span> Affordable, Efficient, and Reliable</h1>
+        <h1><span class="animate-charcter">Appliance Repair Cost</span> Online estimates</h1>
      
-     <div class="two-col-grid"><div class="col-one"><img class="img-header" src="/images/lg-dryer-repair.webp" width="500" height="500" alt="LG DRyer Repair Cost">
+     <div class="two-col-grid"><div class="col-one"><img class="img-header" src="/images/lg-dryer-repair.webp" width="500" height="500" alt="Appliance Repair Cost">
      
      <Contactbtn />
      
      </div>
      
      <div class="col-two">
-       
-      </div></div>
-  <p><a href="/price-list/lg-dryer-repair-cost">Lg Dryer Repair Cost</a></p>
+       <p>Welcome to our comprehansive appliance repair cost page. We are currently developping an online content for our indepth appliance repair cost guid. We understand that the appliance repair cost is one of the main concerns and we want to help you make your decision easier.</p>
+<p><a href="/price-list/dryer-repair-cost" title="Dryer Repair Cost">Dryer Repair Cost</a></p>
+    </div></div>
+  <p><a href="/price-list/lg-dryer-repair-cost" title="Lg Dryer Repair Cost">Lg Dryer Repair Cost</a></p>
 <Cta />
 </Container>
 </Layout>
-
