--- a/src/pages/price-list/appliance-reapir-cost.astro
+++ b/src/pages/price-list/appliance-reapir-cost.astro
@@ -21,9 +21,11 @@ import Layout from "@layouts/Layout.astro";
      
      <div class="col-two">
        <p>Welcome to our comprehansive appliance repair cost page. We are currently developping an online content for our indepth appliance repair cost guid. We understand that the appliance repair cost is one of the main concerns and we want to help you make your decision easier.</p>
-<p><a href="/price-list/dryer-repair-cost" title="Dryer Repair Cost">Dryer Repair Cost</a></p>
+
     </div></div>
+    <p><a href="/price-list/dryer-repair-cost" title="Dryer Repair Cost"><b>Dryer Repair Cost</b></a></p>
   <p><a href="/price-list/lg-dryer-repair-cost" title="Lg Dryer Repair Cost">Lg Dryer Repair Cost</a></p>
 <Cta />
 </Container>
 </Layout>
+
