--- a/src/pages/price-list/lg-dryer-repair-cost.astro
+++ b/src/pages/price-list/lg-dryer-repair-cost.astro
@@ -82,9 +82,8 @@ import Layout from "@layouts/Layout.astro";
        <td class="price"></td>
    </tr>
 
-
    <tr>
-       <td class="tdservice">LG dryer heating element replacement cost *</td>
+       <td class="tdservice"><a class="w" href="/price-list/dryer-heating-element-replacement-cost">LG dryer heating element replacement cost *</a></td>
        <td class="price">$220 </td>
    </tr>
    <tr>
