--- a/src/pages/price-list/dryer-repair-cost.astro
+++ b/src/pages/price-list/dryer-repair-cost.astro
@@ -134,7 +134,7 @@ import Layout from "@layouts/Layout.astro";
       
       <tr>
       
-      <td class="tdservice">Dryer heating element replacement cost *</td>
+      <td class="tdservice"><a class="w" href="/price-list/dryer-heating-element-replacement-cost">Dryer heating element replacement cost *</a></td>
       
       <td class="price">$220 </td>
       
