--- a/src/pages/price-list/dryer-repair-cost.astro
+++ b/src/pages/price-list/dryer-repair-cost.astro
@@ -150,7 +150,7 @@ import Layout from "@layouts/Layout.astro";
       
       <tr>
       
-      <td class="tdservice">Dryer thermal fuse replacement cost *</td>
+      <td class="tdservice"><a class="w" href="/price-list/dryer-thermal-fuse-replacement-cost" title="dryer thermal fuse replacement cost">Dryer thermal fuse replacement cost *</a></td>
       
       <td class="price">$220</td>
       
