--- a/src/pages/price-list/lg-dryer-repair-cost.astro
+++ b/src/pages/price-list/lg-dryer-repair-cost.astro
@@ -83,7 +83,7 @@ import Layout from "@layouts/Layout.astro";
    </tr>
 
    <tr>
-       <td class="tdservice"><a class="w" href="/price-list/dryer-heating-element-replacement-cost">LG dryer heating element replacement cost *</a></td>
+       <td class="tdservice"><a class="w" href="/price-list/dryer-heating-element-replacement-cost" >LG dryer heating element replacement cost *</a></td>
        <td class="price">$220 </td>
    </tr>
    <tr>
@@ -93,7 +93,7 @@ import Layout from "@layouts/Layout.astro";
 
 
    <tr>
-       <td class="tdservice">LG dryer thermal fuse replacement cost *</td>
+       <td class="tdservice"><a class="w" href="/price-list/dryer-thermal-fuse-replacement-cost" title="dryer thermal fuse replacement cost">LG dryer thermal fuse replacement cost *</a></td>
        <td class="price">$220</td>
    </tr>
    <tr>
