--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -263,6 +263,7 @@ import Layout from "@layouts/Layout.astro";
 <h3>Cost Of The Appliance Repair</h3>  
 <p>Our repair process is grounded in transparency and integrity. We prioritize honesty and clear communication in every repair job. Our skilled technicians will thoroughly explain the nature of the problem with your appliance and provide a detailed repair quote upfront, ensuring there are no hidden charges.</p>
 <p>You may refer to the price list on our website to get an idea of what it might cost. While our price list offers a preliminary estimate, remember that only a qualified technician can accurately diagnose the issue with your appliance. Often, what a customer assumes to be the problem can turn out to be something completely different, ranging from a basic issue like a malfunctioning outlet to more complex problems like a faulty compressor.</p> 
+<div class='sk-ww-thumbtack-reviews' data-embed-id='25398377'></div><script src='https://widgets.sociablekit.com/thumbtack-reviews/widget.js' async defer></script>
 <h2><span data-color="var(--blue-10)" style="background-color: var(--blue-10); color: inherit">Expert Appliance Repair Services Across All LA Locations</span></h2>
 
 </div>
