--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -46,6 +46,10 @@ const menuitems = [
     path: "/brands/commercial-and-household",
   },
   {
+    title: "Reviews",
+    path: "#reviews",
+  },
+  {
     title: "Price List",
     path: "/price-list/appliance-reapir-cost",
   },
