--- a/src/components/cta.astro
+++ b/src/components/cta.astro
@@ -2,6 +2,14 @@
 import Link from "./ui/link.astro";
 import { Icon } from "astro-icon";
 ---
+
+<!--Reviews -->
+<h2 id="reviews">Real Customers Reviews From Our <a href="https://www.thumbtack.com/ca/los-angeles/dishwasher-installation/same-day-appliance-repair/service/474673684619198464" title="Thumbtack Reviews" target="_blank">Thumbtack Profile</a></h2>
+<script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
+<div class="elfsight-app-b69045ef-2bc6-4ac0-a4a3-5c17e1820cd5" data-elfsight-app-lazy></div>
+<!--End reviews -->
+
+<h2><span data-color="var(--blue-10)" style="background-color: var(--blue-10); color: inherit">Expert Appliance Repair Services Across All LA Locations</span></h2>
 <p>Our skilled expert appliance repair technicians have extensive experience in servicing and maintaining appliances from leading brands across various locales in the Los Angeles Area. Their expertise enables us to provide a diverse array of local services for home appliances and businesses.</p>
 <p>We serve the following Los Angeles cities and surrounding areas: <strong>Burbank</strong>, <strong>
   Monterey Park</strong>, <strog>Universal City</strog>, <strong>Thousand Oaks</strong>, San Marino, <strong>Altadena, Alhambra </strong>Pasadena, South Pasadena, Santa Monica, Hollywood, West Hollywood Glendale, <strong>Highland Park, Verdugo Woodlands, Atwater Village, Glassell Park, Mount Washington, Eagle Rock</strong>, <strong>Highland Park, Cypress Park, Montecito Heights, Lincoln Heights, East Hollywood, Beverly Hills, Hollywood Hills, Fairfax, Mid City, Downtown Los Angeles, Pacific Palisades, Point 18Big Rock, Eastern Malibu, Chinatown Los Angeles, Echo Park Los Angeles, Silver Lake, Westlake South, Los Feliz, Koreatown, Marina Del Rey, Playa Del Rey, Venice, Culver City, Westdale, West Los Angeles, Northeast, Westwood, Ladera Heights, Bel Air, Beverly Glen, South Beverly Park, Trousdale Estates, The Bird Streets Beverly Ridge Estates, Holmby Hills.</strong></p>
