--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -50,7 +50,7 @@ const menuitems = [
     path: "#reviews",
   },
   {
-    title: "Price List",
+    title: "Price",
     path: "/price-list/appliance-reapir-cost",
   },
   {
