--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -62,6 +62,8 @@ const makeTitle = title
   </head>
   <body>
     <Navbar />
+    <div><p><a  href="https://kitchen.services/reviews/"><strong style="font-size: 17px"> Reviews ⭐⭐⭐⭐⭐ 5.0 </strong> (Google Rating)<a></p>
+      <p><a  href="https://kitchen.services/reviews/"><strong style="font-size: 17px"> Reviews ⭐⭐⭐⭐⭐ 5.0 </strong> (Thumbtack Rating)<a></p>  </div>
     <slot />
     <Footer />
     <style is:global>
