--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -62,7 +62,7 @@ const makeTitle = title
   </head>
   <body>
     <Navbar />
-    <div><p><a  href="#reviews"><strong style="font-size: 17px"> Reviews ⭐⭐⭐⭐⭐ 5.0 </strong> (Google Rating)<a><a  href="https://kitchen.services/reviews/">(Thumbtack Rating)<a></p></div>
+    <div><p><a  href="#reviews"><strong style="font-size: 17px"> Reviews ⭐⭐⭐⭐⭐ 5.0 </strong> (Google Rating)<a><a  href="#reviews">(Thumbtack Rating)<a></p></div>
     <slot />
     <Footer />
     <style is:global>
