--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -29,6 +29,8 @@ const makeTitle = title
     <meta name="viewport" content="width=device-width" />
     <link rel="icon" type="image/svg+xml" href="/favicon.png" />
     <meta name="generator" content={Astro.generator} />
+    <!--Bing Webmaster Tools -->
+    <meta name="msvalidate.01" content="F2723BD576AB7FA778D3F53898576D0B" />
     <!-- <link rel="preload" as="image" href={src} alt="Hero" /> -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-F5MBY27XES"></script>
       <script>
