--- a/src/pages/price-list/dryer-repair-cost.astro
+++ b/src/pages/price-list/dryer-repair-cost.astro
@@ -10,17 +10,19 @@ import Layout from "@layouts/Layout.astro";
 import "css/price/style_price.css";
 
 ---
-<script defer src="/src/js/price/price.js"></script>
+<!-- <script defer src="/src/js/price/price.js"></script> -->
 
 <Layout title="Dryer Repair Cost">
 <Container>
     <main>
+
+      <script defer src="/src/js/price/price.js"></script>
       
         <h1><span class="animate-charcter">Dryer Repair Cost</span></h1>
      
      <div class="two-col-grid">
       <div class="col-one">
-        
+
       <img class="img-header" src="/images/lg-dryer-repair.webp" width="500" height="500" alt="Dryer Repair Cost">
      
      <Contactbtn />
