--- a/src/pages/price-list/dryer-repair-cost.astro
+++ b/src/pages/price-list/dryer-repair-cost.astro
@@ -8,10 +8,11 @@ import Hero from "@components/hero.astro";
 import Logos from "@components/logos.astro";
 import Layout from "@layouts/Layout.astro";
 import "css/price/style_price.css";
+import "../../js/price/price.js";
 
 ---
 <!-- <script defer src="/src/js/price/price.js"></script> -->
-<script defer src="../../js/price/price.js"></script>
+<!-- <script defer src="../../js/price/price.js"></script> -->
 
 <Layout title="Dryer Repair Cost">
 <Container>
