--- a/src/pages/price-list/dryer-repair-cost.astro
+++ b/src/pages/price-list/dryer-repair-cost.astro
@@ -8,7 +8,7 @@ import Hero from "@components/hero.astro";
 import Logos from "@components/logos.astro";
 import Layout from "@layouts/Layout.astro";
 import "css/price/style_price.css";
-// import "../../js/price/price.js";
+import "../../js/price/price.js";
 // <script>console.log("++")</script>
 ---
 <!-- <script defer src="/src/js/price/price.js"></script> -->
