--- a/src/pages/price-list/dryer-repair-cost.astro
+++ b/src/pages/price-list/dryer-repair-cost.astro
@@ -8,11 +8,9 @@ import Hero from "@components/hero.astro";
 import Logos from "@components/logos.astro";
 import Layout from "@layouts/Layout.astro";
 import "css/price/style_price.css";
-import "../../js/price/price.js";
-// <script>console.log("++")</script>
 ---
-<!-- <script defer src="/src/js/price/price.js"></script> -->
-<!-- <script defer src="../../js/price/price.js"></script> -->
+<script defer src="/src/js/price/price.js"></script>
+
 
 <Layout title="Dryer Repair Cost">
 <Container>
@@ -30,7 +28,7 @@ import "../../js/price/price.js";
      </div>
      
      <div class="col-two">
-      <p>111111At Same Day Appliance Repair, we are a family-owned business committed to enhancing your customer experience. We understand the frustration of appliance repairs, and we pride ourselves on our transparency and reliability. This page is designed to give you a thorough understanding of our pricing policies, the costs associated with dryer repairs, and our unique approach to service. We offer a wide range of appliance repair services, including dryer repair, to highlight the breadth of our expertise.</p>
+      <p>At Same Day Appliance Repair, we are a family-owned business committed to enhancing your customer experience. We understand the frustration of appliance repairs, and we pride ourselves on our transparency and reliability. This page is designed to give you a thorough understanding of our pricing policies, the costs associated with dryer repairs, and our unique approach to service. We offer a wide range of appliance repair services, including dryer repair, to highlight the breadth of our expertise.</p>
       <p><b>Have Questions? We’re Here to Help!</b></p>
       <p>Feel free to call us with any questions. Our team is dedicated to assisting you and ensuring your satisfaction.</p>
       <h2>How Much Does It Cost to Repair a Dryer?</h2>
