--- a/src/pages/price-list/dryer-repair-cost.astro
+++ b/src/pages/price-list/dryer-repair-cost.astro
@@ -10,7 +10,7 @@ import Layout from "@layouts/Layout.astro";
 import "css/price/style_price.css";
 ---
 <script defer src="/src/js/price/price.js"></script>
-<script defer>alert("exyy")</script>
+<!-- <script defer>alert("exyy")</script> -->
 
 
 <Layout title="Dryer Repair Cost">
