--- a/src/pages/price-list/dryer-repair-cost.astro
+++ b/src/pages/price-list/dryer-repair-cost.astro
@@ -9,7 +9,8 @@ import Logos from "@components/logos.astro";
 import Layout from "@layouts/Layout.astro";
 import "css/price/style_price.css";
 ---
-<script defer src="/src/js/price/price.js"></script>
+<!-- <script defer src="/src/js/price/price.js"></script> -->
+<script defer src="../../js/price/price.js"></script>
 <!-- <script defer>alert("exyy")</script> -->
 
 
