--- a/src/pages/price-list/dryer-repair-cost.astro
+++ b/src/pages/price-list/dryer-repair-cost.astro
@@ -14,6 +14,22 @@ import "css/price/style_price.css";
 <!-- <script defer src="/src/js/price/price.js"></script> -->
 <!-- <script defer src="../../js/price/price.js"></script> -->
 
+<script defer> 
+document.addEventListener('DOMContentLoaded', function () {
+  let coll = document.getElementsByClassName('FAQ');
+  for (let i = 0; i < coll.length; i++) {
+    coll[i].addEventListener('click', function () {
+      this.classList.toggle('active');
+      let content = this.nextElementSibling;
+      if (content.style.maxHeight) {
+        content.style.maxHeight = null;
+      } else {
+        content.style.maxHeight = content.scrollHeight + 'px';
+      }
+    });
+  }
+});
+</script>
 
 <Layout title="Dryer Repair Cost">
 <Container>
