--- a/src/css/price/style_price.css
+++ b/src/css/price/style_price.css
@@ -74,12 +74,14 @@ main {
     display: inline-block;
     position: relative;
     padding-top: 5px;
-  }
-  
+    font-weight: 300;
+}
+
   .fa_minus {
     display: none;
     position: relative;
     padding-bottom: 5px;
+    font-weight: 300;
   }
   
   .questions {
