--- a/src/pages/price-list/dryer-repair-cost.astro
+++ b/src/pages/price-list/dryer-repair-cost.astro
@@ -15,7 +15,7 @@ import "css/price/style_price.css";
 <!-- <script defer src="../../js/price/price.js"></script> -->
 
 <script defer> 
-document.addEventListener('DOMContentLoaded', function () {
+  document.addEventListener('DOMContentLoaded', function () {
   let coll = document.getElementsByClassName('FAQ');
   for (let i = 0; i < coll.length; i++) {
     coll[i].addEventListener('click', function () {
@@ -27,8 +27,8 @@ document.addEventListener('DOMContentLoaded', function () {
         content.style.maxHeight = content.scrollHeight + 'px';
       }
     });
-  }
-});
+    }
+  });
 </script>
 
 <Layout title="Dryer Repair Cost">
@@ -52,7 +52,10 @@ document.addEventListener('DOMContentLoaded', function () {
       <p>Feel free to call us with any questions. Our team is dedicated to assisting you and ensuring your satisfaction.</p>
       <h2>How Much Does It Cost to Repair a Dryer?</h2>
       <p>Discussing the average cost to repair is essential when considering the general costs associated with repairing common household appliances. Understanding the average dryer repair costs can help homeowners budget for repairs more effectively. Dryer repair costs can vary based on the type of issue as well as the brand and model of your appliance. Our technician will first need to diagnose the problem to provide you with the most accurate estimate. Following the diagnosis, you’ll receive a detailed price breakdown. This helps make an informed decision about whether to repair or replace your dryer and includes recommendations should you consider a replacement.</p>
-      </div></div>
+      </div>
+    </div>
+
+
       <h2>Our Pricing Policy For Dryer Repair And How We Work</h2>
 <p>There are four costs to consider when making your dryer work optimally.</p>
 <p><b>Maintenance Cost</b> - Regular maintenance is essential for your dryer’s longevity and optimal performance. We recommend annual maintenance, which includes checking drum and door seals for damage, lubricating moving parts, tightening electrical connections, testing the thermostat and heating element, and checking the exhaust hood. Our flat fee for this comprehensive service is $80. This preventive approach is not only cost-effective by reducing the need for dryer repair but also enhances the efficiency and lifespan of your appliance. Schedule your maintenance appointment with us today and ensure your dryer runs smoothly.</p>
@@ -61,341 +64,440 @@ document.addEventListener('DOMContentLoaded', function () {
 <p><b>Replacement Parts cost</b> - See prices below. While not every repair needs new parts, certain situations require them to restore your dryer to peak performance. Our technicians carry various parts in their vehicles, which usually enables same-day repairs. If a part must be ordered, the cost will vary depending on your dryer's repair, brand, and model.</p>
 <p>We always do our best to find parts at a lower price for our customers. We do not make extra money on the parts; our priority is to make it as easy as possible for the customer.</p>
 <p>Understanding the average cost to fix an appliance, including refrigerators, dishwashers, washers, and dryers, is crucial for homeowners who want to decide whether to replace or repair them.</p>
-<h2>Dryer Repair Cost - Labor Only Excluding Parts</h2>
-<p>Here are the common problems and associated dryer repair costs in Los Angeles:</p>
-      <Btn />
 
-      <table style="font-size:1.5em; width:90%; margin:0 auto 0 auto;">
-      
-      <tbody>
-        <tr>
-        <td class="tdservice">Heating Dryer Belt Replacement</td>
-          <td rowspan="2" class="price">$100 - $250</td>
-           <tr>
-         <td class="tdred">The dryer drum doesn't turn when the motor is running, or you hear a loud noise like a thumping sound.</td>
-     
-     </tr>    
-     <tr>
-      <td class="tdservice">Thermostat Replacement</td>
-        <td rowspan="2" class="price">$100 - $300</td>
-         <tr>
-       <td class="tdred">The dryer overheats or doesn't heat up, resulting in burnt or damp clothes.</td>
-   </tr>   
-   <tr>
-    <td class="tdservice">Control Board Replacement</td>
-      <td rowspan="2" class="price">$250 - $500.</td>
-       <tr>
-     <td class="tdred">The dryer doesn't start, or it starts but doesn't complete the cycle, and there are no other apparent issues like a faulty door switch or thermal fuse.</td>
- 
- </tr>   
-     <tr>
+<Btn />
+
+
+<div class="job-prices">
+
+  <div class="head-prices">
+    <h2>Dryer Repair Cost - Labor Only Excluding Parts</h2>
+    <p>Here are the common problems and associated dryer repair costs in Los Angeles:</p>
+  </div>
     
-      <td class="tdservice"><a class="w" href="/price-list/dryer-roller-replacement-cost">Dryer rollers replacement cost*</a></td>
-      
-      <td class="price">$200</td>
-      
-      </tr>
-      
-      <tr>
-      
-      <td class="tdred">Dryer making noise or loud vibrating noise during drum rotation</td>
-      
-      <td class="price"></td>
-      
-      </tr>
-      
-      <tr>
-      
-      <td class="tdservice"><a class="w" href="/price-list/dryer-vent-installation-cost">Dryer vent installation cost*</a></td>
-      
-      <td class="price">$190</td>
-      
-      </tr>
-      
-      <tr>
-      
-      <td class="tdred">Dryer drying slow, builds excessive lint, overheating, creates mold or meldew oders and excessive humidity in the laundry room</td>
-      
-      <td class="price"></td>
-      
-      </tr>
-      
-      <tr>
-      
-      <td class="tdservice"><a class="w" href="/price-list/dryer-vent-repair-cost">Dryer vent repair cost*</a></td>
-      
-      <td class="price">$190</td>
-      
-      </tr>
-      
-      <tr>
-      
-      <td class="tdred">Dryer drying slow, builds excessive lint, overheating, creates mold or meldew oders and excessive humidity in the laundry room</td>
-      
-      <td class="price"></td>
-      
-      </tr>
-      
-      <tr>
-      
-      <td class="tdservice"><a class="w" href="/price-list/dryer-idler-pulley-replacement-cost">Dryer idler pulley replacement cost *</a></td>
-      
-      <td class="price">$220</td>
-      
-      </tr>
-      
-      <tr>
-      
-      <td class="tdred">LG dryer making scraping noise</td>
-      
-      <td class="price"></td>
-      
-      </tr>
-      
-      <tr>
-      
-      <td class="tdservice"><a class="w" href="/price-list/dryer-motor-replacement-cost">Dryer motor replacement cost *</a></td>
-      
-      <td class="price">$220</td>
-      
-      </tr>
-      
-      <tr>
-      
-      <td class="tdred">LG dryer powers on but won't start</td>
-      
-      <td class="price"></td>
-      
-      </tr>
-      
-      <tr>
-      
-      <td class="tdservice"><a class="w" href="/price-list/dryer-igniter-replacement-cost">Dryer igniter replacement cost *</a></td>
-      
-      <td class="price">$220</td>
-      
-      </tr>
-      
-      <tr>
-      
-      <td class="tdred">LG dryer not heating</td>
-      
-      <td class="price"></td>
-      
-      </tr>
-      
-      <tr>
-      
-      <td class="tdservice"><a class="w" href="/price-list/dryer-heating-element-replacement-cost">Dryer heating element replacement cost *</a></td>
-      
-      <td class="price">$220 </td>
-      
-      </tr>
-      
-      <tr>
-      
-      <td class="tdred">Dryer not drying </td>
-      
-      <td class="price"></td>
-      
-      </tr>
-      
-      <tr>
-      
-      <td class="tdservice"><a class="w" href="/price-list/dryer-thermal-fuse-replacement-cost" title="dryer thermal fuse replacement cost">Dryer thermal fuse replacement cost *</a></td>
-      
-      <td class="price">$220</td>
-      
-      </tr>
-      
-      <tr>
-      
-      <td class="tdred">Dryer not drying fully</td>
-      
-      <td class="price"></td>
-      
-      </tr>
-      
-      <tr>
-      
-      <td class="tdservice">Dryer vent cleaning / dryer duct cleaning / clean dryer exhaust / clean out
-      
-       dryer vent / clothes dryer vent cleaning cost *
-      
-      </td>
-      
-      <td class="price">$220 and up</td>
-      
-      </tr>
-      
-      <tr>
-      
-      <td class="tdred">Clothes dryer not getting hot</td>
-      
-      <td class="price"></td>
-      
-      </tr>
-      
-      <tr>
-      
-      <td class="tdservice">Dryer cleaning service cost *</td>
-      
-      <td class="price">$150</td>
-      
-      </tr>
-      
-      <tr>
-      
-      <td class="tdred">It is recommended to do at least 1 time a year to avoid fire</td>
-      
-      <td class="price"></td>
-      
-      </tr>
-      
-      <tr>
-      
-      <td class="tdservice">Dryer reverse door cost *</td>
-      
-      <td class="price">$120</td>
-      
-      </tr>
-      
-      <tr>
-      
-      <td class="tdred"></td>
-      
-      <td class="price"></td>
-      
-      </tr>
-      
-      <tr>
-      
-      <td class="tdservice">Dryer door lock replacement cost *</td>
-      
-      <td class="price">$200</td>
-      
-      </tr>
-      
-      <tr>
-      
-      <td class="tdred">Dryer not turning on</td>
-      
-      <td class="price"></td>
-      
-      </tr>
-      
-      <tr>
-      
-      <td class="tdservice">Install dryer vent cost/ dryer vent hook up *</td>
-      
-      <td class="price">$190</td>
-      
-      </tr>
-      
-      <tr>
-      
-      <td class="tdred"></td>
-      
-      <td class="price"></td>
-      
-      </tr>
-      
-      <tr>
-      
-      <td class="tdservice">Install dryer vent cost / hook up gas dryer *</td>
-      
-      <td class="price">$190</td>
-      
-      </tr>
-      
-      <tr>
-      
-      <td class="tdred"></td>
-      
-      <td class="price"></td>
-      
-      </tr>
-      
-      <tr>
-      
-      <td class="tdservice">Dryer and washer installation/ stackable washer dryer installation cost *</td>
-      
-      <td class="price">$240</td>
-      
-      </tr>
-      
-      <tr>
-      
-      <td class="tdred"></td>
-      
-      <td class="price"></td>
-      
-      </tr>
-      
-      <tr>
-      
-      <td class="tdservice">Dryer gas valve replacement cost *</td>
-      
-      <td class="price">$240</td>
-      
-      </tr>
-      
-      <tr>
-      
-      <td class="tdred">Clothes dryer not heating</td>
-      
-      <td class="price"></td>
-      
-      </tr>
-      
-      <tr>
-      
-      <td class="tdservice">Gas valve coils replacement cost *</td>
-      
-      <td class="price">$190</td>
-      
-      </tr>
-      
-      <tr>
-      
-      <td class="tdred">Dryer is not drying</td>
-      
-      <td class="price"></td>
-      
-      </tr>
-      
-      <tr>
-      
-      <td class="tdservice">Dryer maintenance cost *</td>
-      
-      <td class="price">$190</td>
-      
-      </tr>
-      
-      <tr>
-      
-      <td class="tdred"></td>
-      
-      <td class="price"></td>
-      
-      </tr>
-      
-      <tr>
-      
-      <td class="tdservice">Dryer drum replacement cost *</td>
-      
-      <td class="price">$220</td>
-      
-      </tr>
-      
-      <tr>
-      
-      <td class="tdred"></td>
-      
-      <td class="price"></td>
-      
-      </tr>
-      
+
+
+
+
+
+
+
+<div class="content_job-prices" id="col-prices">
+
+  <div class="desk_job-prices">
+    <a href="#"><p>Heating Dryer Belt Replacement.</p></a>
+    <p>The dryer drum doesn't turn when the motor is running, or you hear a loud noise like a thumping sound.</p>
+  </div>
+
+  <div class="money_job-prices">
+    <p>100 - 250$</p>
+  </div>
+
+</div>
+
+
+
+
+<div class="content_job-prices">
+
+  <div class="desk_job-prices">
+    <a href="#"><p>Thermostat Replacement.</p></a>
+    <p>The dryer overheats or doesn't heat up, resulting in burnt or damp clothes.</p>
+  </div>
+
+  <div class="money_job-prices">
+    <p>100 - 250$</p>
+  </div>
+
+</div>
+
+
+
+
+
+<div class="content_job-prices" id="col-prices">
+
+  <div class="desk_job-prices">
+    <a href="#"><p>Control Board Replacement.</p></a>
+    <p>The dryer doesn't start, or it starts but doesn't complete the cycle, and there are no other apparent issues like a faulty door switch or thermal fuse.</p>
+  </div>
+
+  <div class="money_job-prices">
+    <p>100 - 300$</p>
+  </div>
+
+</div>
+
+
+
+
+
+
+<div class="content_job-prices">
+
+  <div class="desk_job-prices">
+    <a href="/price-list/dryer-roller-replacement-cost"><p>Dryer rollers replacement cost*</p></a>
+    <p>Dryer making noise or loud vibrating noise during drum rotation.</p>
+  </div>
+
+  <div class="money_job-prices">
+    <p>200$</p>
+  </div>
+
+</div>
+
+
+
+
+
+
+
+<div class="content_job-prices" id="col-prices">
+
+  <div class="desk_job-prices">
+    <a href="/price-list/dryer-vent-installation-cost"><p>Dryer vent installation cost*</p></a>
+    <p>Dryer drying slow, builds excessive lint, overheating, creates mold or meldew oders and excessive humidity in the laundry room.</p>
+  </div>
+
+  <div class="money_job-prices">
+    <p>190$</p>
+  </div>
+
+</div>
+
+
+
+
+
+
+
+<div class="content_job-prices">
+
+  <div class="desk_job-prices">
+    <a href="/price-list/dryer-vent-repair-cost"><p>Dryer vent repair cost*</p></a>
+    <p>Dryer drying slow, builds excessive lint, overheating, creates mold or meldew oders and excessive humidity in the laundry room.</p>
+  </div>
+
+  <div class="money_job-prices">
+    <p>190$</p>
+  </div>
+
+</div>
+
+
+
+
+
+
+
+
+<div class="content_job-prices" id="col-prices">
+
+  <div class="desk_job-prices">
+    <a href="/price-list/dryer-idler-pulley-replacement-cost"><p>Dryer idler pulley replacement cost*</p></a>
+    <p>LG dryer making scraping noise.</p>
+  </div>
+
+  <div class="money_job-prices">
+    <p>220$</p>
+  </div>
+
+</div>
+
+
+
+
+
+
+
+<div class="content_job-prices">
+
+  <div class="desk_job-prices">
+    <a href="/price-list/dryer-motor-replacement-cost"><p>Dryer motor replacement cost*</p></a>
+    <p>LG dryer powers on but won't start.</p>
+  </div>
+
+  <div class="money_job-prices">
+    <p>220$</p>
+  </div>
+
+</div>
+
+
+
+
+
+
+
+
+<div class="content_job-prices" id="col-prices">
+
+  <div class="desk_job-prices">
+    <a href="/price-list/dryer-igniter-replacement-cost"><p>Dryer igniter replacement cost*</p></a>
+    <p>LG dryer not heating.</p>
+  </div>
+
+  <div class="money_job-prices">
+    <p>220$</p>
+  </div>
+
+</div>
+
+
+
+
+
+
+
+
+<div class="content_job-prices">
+
+  <div class="desk_job-prices">
+    <a href="/price-list/dryer-heating-element-replacement-cost"><p>Dryer heating element replacement cost*</p></a>
+    <p>Dryer not drying.</p>
+  </div>
+
+  <div class="money_job-prices">
+    <p>220$</p>
+  </div>
+
+</div>
+
+
+
+
+
+
+
+<div class="content_job-prices" id="col-prices">
+
+  <div class="desk_job-prices">
+    <a href="/price-list/dryer-thermal-fuse-replacement-cost"><p>Dryer thermal fuse replacement cost*</p></a>
+    <p>Dryer not drying fully.</p>
+  </div>
+
+  <div class="money_job-prices">
+    <p>220$</p>
+  </div>
+
+</div>
+
+
+
+
+
+
+<div class="content_job-prices">
+
+  <div class="desk_job-prices">
+    <a href="#"><p>Dryer vent cleaning / dryer duct cleaning / clean dryer exhaust / clean out dryer vent / clothes dryer vent cleaning cost*</p></a>
+    <p>Clothes dryer not getting hot.</p>
+  </div>
+
+  <div class="money_job-prices">
+    <p>220$</p>
+  </div>
+
+</div>
+
+
+
+
+
+
+
+
+<div class="content_job-prices" id="col-prices">
+
+  <div class="desk_job-prices">
+    <a href="#"><p>Dryer cleaning service cost*</p></a>
+    <p>It is recommended to do at least 1 time a year to avoid fire.</p>
+  </div>
+
+  <div class="money_job-prices">
+    <p>150$</p>
+  </div>
+
+</div>
+
+
+
+
+
+
+<div class="content_job-prices">
+
+  <div class="desk_job-prices">
+    <a href="#"><p>Dryer reverse door cost*</p></a>
+  </div>
+
+  <div class="money_job-prices">
+    <p>120$</p>
+  </div>
+
+</div>
+
+
+
+
+
+
+<div class="content_job-prices" id="col-prices">
+
+  <div class="desk_job-prices">
+    <a href="#"><p>Dryer door lock replacement cost*</p></a>
+    <p>Dryer not turning on.</p>
+  </div>
+
+  <div class="money_job-prices">
+    <p>200$</p>
+  </div>
+
+</div>
+
+
+
+
+
+
+<div class="content_job-prices">
+
+  <div class="desk_job-prices">
+    <a href="#"><p>Install dryer vent cost/ dryer vent hook up*</p></a>
+  </div>
+
+  <div class="money_job-prices">
+    <p>190$</p>
+  </div>
+
+</div>
+
+
+
+
+
+<div class="content_job-prices" id="col-prices">
+
+  <div class="desk_job-prices">
+    <a href="#"><p>Install dryer vent cost / hook up gas dryer*</p></a>
+  </div>
+
+  <div class="money_job-prices">
+    <p>190$</p>
+  </div>
+
+</div>
+
+
+
+
+
+
+<div class="content_job-prices">
+
+  <div class="desk_job-prices">
+    <a href="#"><p>Dryer and washer installation/ stackable washer dryer installation cost*</p></a>
+  </div>
+
+  <div class="money_job-prices">
+    <p>240$</p>
+  </div>
+
+</div>
+
+
+
+
+
+<div class="content_job-prices" id="col-prices">
+
+  <div class="desk_job-prices">
+    <a href="#"><p>Dryer gas valve replacement cost*</p></a>
+    <p>Clothes dryer not heating.</p>
+  </div>
+
+  <div class="money_job-prices">
+    <p>240$</p>
+  </div>
+
+</div>
+
+
+
+
+
+
+<div class="content_job-prices">
+
+  <div class="desk_job-prices">
+    <a href="#"><p>Gas valve coils replacement cost *</p></a>
+    <p>Dryer is not drying.</p>
+  </div>
+
+  <div class="money_job-prices">
+    <p>190$</p>
+  </div>
+
+</div>
+
+
+
+
+
+
+
+<div class="content_job-prices" id="col-prices">
+
+  <div class="desk_job-prices">
+    <a href="#"><p>Dryer maintenance cost*</p></a>
+  </div>
+
+  <div class="money_job-prices">
+    <p>190$</p>
+  </div>
+
+</div>
+
+
+
+
+
+
+
+
+<div class="content_job-prices">
+
+  <div class="desk_job-prices">
+    <a href="#"><p>Dryer drum replacement cost*</p></a>
+  </div>
+
+  <div class="money_job-prices">
+    <p>220$</p>
+  </div>
+
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<br><br><br><br><br><br><br><br>
+
+
+      <table style="font-size:1.5em; width:100%; margin:0 auto 0 auto;">
+      
+      <tbody>   
+    
       <tr>
       
       <td class="tdservice">* including cleaning from dust inside the unit</td>
@@ -405,15 +507,33 @@ document.addEventListener('DOMContentLoaded', function () {
       </tr>
       
       </tbody>
-      
+
+
       </table>
-      <p>Dryer replacement parts costs can vary depending on your dryer's specific part, brand, and model. Here’s a ballpark range for some common dryer parts:</p>
-      <h2>Dryer Replacement Parts Costs</h2>
-      <Btn />
+      
+    </div>
+    
+    
+    <Btn />
+    
+    
+
+
+
+
+
+
+
+
+
+
+    <h2>Dryer Replacement Parts Costs</h2>
+    <p>Dryer replacement parts costs can vary depending on your dryer's specific part, brand, and model. Here’s a ballpark range for some common dryer parts:</p>
+
       <table style="font-size:1.5em; width:90%; margin:0 auto 0 auto;">
        <tr>
        <td class="tdred">
-Door Latch Kit/td
+Door Latch Kit
          <td class="price">
  $5 - $7</td></tr>
        <tr>
